[package]
name = "dioxus-odin"
version = "0.1.0"
authors = ["Ryan Parsley <RMParsley@gmail.com>"]
edition = "2021"

[scripts]
prebuild = "cargo fmt --check"
build = "cargo run --script cargo build --release --depend prebuild,postbuild"
postbuild = "cargo test"
test = "cargo test"
lint = "cargo clippy"
dev-book = "mdbook serve"

[workspace]
members = [
    ".",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
